[tool.poetry]
name = "qq"
version = "0.1.0"
description = "Run SQL against CSV or TSV file(s)."
authors = ["Don Welch <dwelch91@gmail.com>"]
license = "MIT"
homepage = "https://github.com/dwelch91/qq"
repository = "https://github.com/dwelch91/qq"
readme = "README.md"
keywords = ["qq", "csv", "sql"]
classifiers=[
          'Development Status :: 3 - Alpha',
          'Environment :: Console',
          'Operating System :: POSIX',
          'Environment :: MacOS X',
          'License :: OSI Approved :: MIT License',
          'Natural Language :: English',
          'Programming Language :: Python :: 3.5',
          'Programming Language :: Python :: 3.6',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3 :: Only',
          'Intended Audience :: Developers',
          'Topic :: Software Development :: Libraries',
          'Topic :: Utilities',
      ]


[tool.poetry.dependencies]
python = "^3.5"
prettytable = "=0.7.2"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
qq = 'qq.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
