[tool.poetry]
name = "tql"
version = "0.1.0"
description = "Run SQL against CSV or TSV file(s)."
authors = ["Don Welch <dwelch91@gmail.com>", "Jared Welch <jwelch92@gmail.com>"]
license = "MIT"
homepage = "https://github.com/dwelch91/tql"
repository = "https://github.com/dwelch91/tql"
readme = "README.md"
keywords = ["tql", "csv", "sql"]
classifiers=[
          'Development Status :: 3 - Alpha',
          'Environment :: Console',
          'Operating System :: POSIX',
          'Environment :: MacOS X',
          'License :: OSI Approved :: MIT License',
          'Natural Language :: English',
          'Programming Language :: Python :: 3.5',
          'Programming Language :: Python :: 3.6',
          'Programming Language :: Python :: 3.7',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3 :: Only',
          'Intended Audience :: Developers',
          'Topic :: Software Development :: Libraries',
          'Topic :: Utilities',
      ]


[tool.poetry.dependencies]
pendulum = "^2.0"
prettytable = "=0.7.2"
pytablereader = "^0.22.0"
pytablewriter = "^0.36.0"
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tql = 'tql.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
